make activation hint outline have fixed non-zero width so always visible

--- a/src/show_hints.css
+++ b/src/show_hints.css
@@ -85,6 +85,7 @@
 	background-color: yellow !important;
 	outline-style:    dashed  !important;
 	outline-color:    red !important;
+	outline-width:    3px !important;
     }
 
     /* a:focus { */
